scrollbar fix

--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,7 @@ a:hover {
 	margin-bottom: 5px;
 	float: left;
 	overflow-x: hidden;
+	overflow-y: hidden;
 }
 
 .r {
@@ -276,6 +277,7 @@ a:hover {
 	margin-bottom: 5px;
 	float: left;
 	overflow-x: hidden;
+	overflow-y: hidden;
 }
 
 
@@ -292,7 +294,10 @@ a:hover {
 .c::-webkit-scrollbar,
 .r::-webkit-scrollbar,
 .t::-webkit-scrollbar,
-#exhibition::-webkit-scrollbar {
+.x::-webkit-scrollbar,
+#exhibition::-webkit-scrollbar,
+#info::-webkit-scrollbar,
+#index::-webkit-scrollbar {
  	display: none;
 }
 
@@ -304,6 +309,7 @@ a:hover {
 .x {
 	width: 30px;
 	height: 30px;
+
 }
 
 h2 {
@@ -451,7 +457,8 @@ ul.section-list {
 
 #bottom {
 	position: relative;
-	margin: 50px 10px;
+	margin: 50px 0 50px 10px;
+	padding-top: 6px;
 	border-top: 1px solid #e9e9e9;
 }
 
